infra/modules/tech_int/iac_vpc.tf
resource "aws_vpc" "this" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Tech int VPC"
  }
}
